--- a/sfos-patch-keyboard-wider-spacebar/CONFIG
+++ b/sfos-patch-keyboard-wider-spacebar/CONFIG
@@ -34,15 +34,12 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-wider-spacebar
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.0
+Version: 1.0.1
 Release: 1
 
 Requires:
 - sailfish-version >= 3.0.0
 - jolla-keyboard >= 0.7.1
-
-Conflicts:
-- sfos-patch-keyboard-apostrophe-key
 
 # Obsoletes:
 # - the-other-old-name
@@ -58,6 +55,9 @@ CompatibleVersions:
 - 3.0.3.10
 
 Changelog:
-- initial public release
+- 1.0.1:
+- - the patch no longer conflicts with the apostrophe key patch
+-
+- 1.0.0: initial public release
 
 # kate: syntax SailfishOS Patch
