--- a/sfos-patch-keyboard-swiss-french-layout/CONFIG
+++ b/sfos-patch-keyboard-swiss-french-layout/CONFIG
@@ -38,7 +38,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-swiss-french-k
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.0
+Version: 1.0.1
 Release: 1
 
 Requires:
@@ -83,8 +83,15 @@ CompatibleVersions:
 - 3.0.3.8
 - 3.0.3.9
 - 3.0.3.10
+- 3.1.0.11
+- 3.2.0.12
+- 3.2.1.20
 
 Changelog:
-- initial public release
+- 1.0.1:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS 3
+-
+- 1.0.0:
+- - initial public release
 
 # kate: syntax SailfishOS Patch
