--- a/sfos-patch-podcatcher-various/CONFIG
+++ b/sfos-patch-podcatcher-various/CONFIG
@@ -41,7 +41,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-various-change
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.1.2
+Version: 1.1.4
 Release: 1
 
 Requires:
@@ -83,8 +83,17 @@ CompatibleVersions:
 - 3.0.3.8
 - 3.0.3.9
 - 3.0.3.10
+- 3.1.0.11
+- 3.2.0.12
+- 3.2.1.20
 
 Changelog:
+- 1.1.4:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS 3
+-
+- 1.1.3:
+- - improved handling of downloaded/played episodes
+-
 - 1.1.2:
 - - fixed incompatibilities with latest upstream
 - - the patch should work with versions 1.1.23 to 1.1.25 of harbour-podcatcher now
