[keyboard-for-long-phones] add discussion link

--- a/sfos-patch-keyboard-for-long-phones/CONFIG
+++ b/sfos-patch-keyboard-for-long-phones/CONFIG
@@ -43,7 +43,7 @@ Description:
 - where [Edz](https://together.jolla.com/users/907/edz/) provided the first
 - patch. It was further improved by [rdomschk](https://openrepos.net/users/rdomschk).
 
-# DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-...
+DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-keyboard-adapted-long-phones-xperia-10
 # DonationsLink: still missing
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
