[keyboard-for-long-phones] update credits

--- a/sfos-patch-keyboard-for-long-phones/CONFIG
+++ b/sfos-patch-keyboard-for-long-phones/CONFIG
@@ -38,8 +38,8 @@ Description:
 - [here](https://together.jolla.com/question/220879/idea-raise-the-keyboard-on-long-devices/)
 - by [JacekJagosz](https://openrepos.net/users/jacekjagosz)
 - where [Edz](https://together.jolla.com/users/907/edz/) provided the first
-- patch. It was further improved by [rdomschk](https://openrepos.net/users/rdomschk).
--
+- patch. It was further improved by [kuby77](https://openrepos.net/users/kuba77)
+- and [rdomschk](https://openrepos.net/users/rdomschk).
 - Screenshots were provided by [theyosh](https://openrepos.net/users/theyosh).
 
 DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-keyboard-adapted-long-phones-xperia-10
