--- a/sfos-patch-keyboard-for-long-phones/CONFIG
+++ b/sfos-patch-keyboard-for-long-phones/CONFIG
@@ -46,7 +46,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-keyboard-adapt
 # DonationsLink: still missing
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.0
+Version: 1.0.1
 Release: 1
 
 Requires:
@@ -62,8 +62,16 @@ Screenshots:
 
 CompatibleVersions:
 - 3.2.1.20
+- 3.3.0.14
+- 3.3.0.16
+- 3.4.0.22
+- 3.4.0.24
+
 
 Changelog:
+- 1.0.1:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
+-
 - 1.0.0 (2020-01-11):
 - - initial public release
 
