--- a/sfos-patch-keyboard-phone-space-key/CONFIG
+++ b/sfos-patch-keyboard-phone-space-key/CONFIG
@@ -32,7 +32,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-add-space-key-
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.1
+Version: 1.0.2
 Release: 1
 
 Requires:
@@ -55,8 +55,16 @@ CompatibleVersions:
 - 3.1.0.11
 - 3.2.0.12
 - 3.2.1.20
+- 3.3.0.14
+- 3.3.0.16
+- 3.4.0.22
+- 3.4.0.24
+
 
 Changelog:
+- 1.0.2:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
+-
 - 1.0.1:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS 3
 -
