--- a/sfos-patch-keyboard-swiss-german-layout/CONFIG
+++ b/sfos-patch-keyboard-swiss-german-layout/CONFIG
@@ -47,7 +47,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-swiss-german-k
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.4
+Version: 1.0.5
 Release: 1
 
 Requires:
@@ -96,8 +96,16 @@ CompatibleVersions:
 - 3.1.0.11
 - 3.2.0.12
 - 3.2.1.20
+- 3.3.0.14
+- 3.3.0.16
+- 3.4.0.22
+- 3.4.0.24
+
 
 Changelog:
+- 1.0.5:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
+-
 - 1.0.4:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS 3
 -
