--- a/sfos-patch-keyboard-wider-spacebar/CONFIG
+++ b/sfos-patch-keyboard-wider-spacebar/CONFIG
@@ -34,7 +34,7 @@ DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-wider-spacebar
 # DonationsLink: https://example.org/donations
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.2
+Version: 1.0.3
 Release: 1
 
 Requires:
@@ -56,8 +56,16 @@ CompatibleVersions:
 - 3.1.0.11
 - 3.2.0.12
 - 3.2.1.20
+- 3.3.0.14
+- 3.3.0.16
+- 3.4.0.22
+- 3.4.0.24
+
 
 Changelog:
+- 1.0.3:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
+-
 - 1.0.2:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS 3
 -
