--- a/sfos-patch-keyboard-color-stock-emojis/CONFIG
+++ b/sfos-patch-keyboard-color-stock-emojis/CONFIG
@@ -15,7 +15,7 @@
 SourcePackages:
 - jolla-keyboard >= 0.7.1
 
-Prefix: /usr/share
+Prefix: /usr/share/maliit/plugins/com/jolla
 DisplayName: Stock emoji keyboard with colors
 PackageName: sfos-patch-keyboard-color-stock-emojis
 Category: Keyboard
@@ -27,8 +27,6 @@ Keywords:
 Maintainer: ichthyosaurus
 Summary: Patch adding support for color emojis to the stock emoji keyboard
 Description:
-- **Work in progress: not yet compatible with SFOS 4!**
--
 - This patch adds support for color emojis, skin tone variations, and different
 - emoji styles to the stock emoji keyboard layout.
 - Recently used emojis are available in the suggestions row for quick use.
@@ -39,16 +37,19 @@ Description:
 - **Note:** remove the [improved stock emojis](https://openrepos.net/content/ichthyosaurus/patch-improved-stock-emoji-keyboard)
 - patch before installing.
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-stock-emoji-keyboard-colors
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.1
+# NOTE don't forget to update the version in
+# <...>/patched/maliit/plugins/com/jolla/ichthyo_color_emojis/EmojiConfigOverlay.qml
+Version: 1.4.0
 Release: 1
+License: GPL-3.0-or-later
 
 Requires:
-- sailfish-version >= 3.0.0
-- jolla-keyboard >= 0.7.1
+- sailfish-version >= 3.4.0
+- @sources
 
 Conflicts:
 - sfos-patch-keyboard-improved-stock-emojis
@@ -57,33 +58,64 @@ Screenshots:
 - screenshot-1.png
 - screenshot-2.png
 - screenshot-3.png
+- screenshot-4.png
 
 CompatibleVersions:
-- 3.0.0.5
-- 3.0.0.8
-- 3.0.0.11
-- 3.0.1.11
-- 3.0.1.14
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 Changelog:
+- 1.4.0:
+- - Added troubleshooting option in emoji keyboard settings: easily restart the keyboard service if no keys are being shown
+- - Fixed skin tone variations not being shown as images on SFOS 4
+- - Fixed log spam due to undefined variables on SFOS 4
+- - Updated compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+-
+- 1.3.0:
+- - Emoji support updated to Emoji 14.0 (introducing melting face, more skin tone variations, etc.).
+- - IMPORTANT: you must manually update/re-download your emoji sets!
+- - Added support for Apple and Google Noto styles
+- - Added partial support for loading outdated emoji sets
+- - Added support for having a large number of variations on a key (this may impact other keyboards)
+-
+- 1.2.0:
+- - Preliminary support for shared use of the emoji implementation in other apps
+- - Improved stability of skin tone variations on SFOS 4
+-
+- 1.1.0:
+- - Experimental compatibility with SFOS 4
+- - Some settings require to change back and forth to a text keyboard to take effect
+- - Make key size configurable
+- - Increase history size from 30 to 40
+- - Show if an emoji set is currently installed
+- - Don't show placeholder while loading icons to avoid flickering
+- - Use simplified config label component
+- - Fix some flickering when closing the config overlay
+- - Fix removing failed icons from list of recently used emojis
+- - Fix a possible bug causing last row to be empty
+-
 - 1.0.1:
-- - support users other than "nemo"
-- - close settings page by dragging like a fake pulley menu
-- - configure number of keyboard rows
-- - fix some corner cases causing the keyboard to become unresponsive
+- - Support users other than "nemo"
+- - Close settings page by dragging like a fake pulley menu
+- - Configure number of keyboard rows
+- - Fix some corner cases causing the keyboard to become unresponsive
 -
 - 1.0.0:
-- - initial public release (not yet compatible with SFOS 4)
+- - Initial public release (not yet compatible with SFOS 4)
 
 # kate: syntax SailfishOS Patch
