update some patches

--- a/sfos-patch-notes-sections/CONFIG
+++ b/sfos-patch-notes-sections/CONFIG
@@ -5,16 +5,21 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
-# - multiple lines: Description, Screenshots, CompatibleVersions,
-#             Changelog, Requires, Keywords
+#             SourcesLink, Version, Release, License
+# - multiple lines: Keywords, Description, Screenshots,
+#             CompatibleVersions, Changelog, Requires,
+#             Obsoletes, Conflicts
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 SourcePackages:
-- jolla-notes
+- jolla-notes >= 1.0.0
 
-Prefix: /usr/share
+Prefix: /usr/share/jolla-notes
 DisplayName: Timestamped sections in stock Notes app
 PackageName: sfos-patch-notes-sections
 Category: Others
@@ -28,15 +33,20 @@ Summary: Patch adding an option to the pulley menu for inserting timestamped sec
 Description:
 - Add an option to the stock Notes app pulley menu for inserting timestamped sections to keep order.
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-timestamped-sections-stock-notes-app
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.3
+Version: 1.1.0
 Release: 1
+License: GPL-3.0-or-later
 
 Requires:
 - sailfish-version >= 3.0.0
+- @sources
+
+TestCommands:
+- killall jolla-notes
 - jolla-notes
 
 Screenshots:
@@ -60,9 +70,31 @@ CompatibleVersions:
 - 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
-
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 Changelog:
+- 1.1.0:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+- - you may have to install an earlier version of this patch on older system versions
+- - add donations link
+-
+- 1.0.4:
+- - add Polish translation by atlochowski
+-
 - 1.0.3:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
