--- a/sfos-patch-keyboard-swiss-german-layout/CONFIG
+++ b/sfos-patch-keyboard-swiss-german-layout/CONFIG
@@ -5,17 +5,21 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
+#             SourcesLink, Version, Release, License
 # - multiple lines: Keywords, Description, Screenshots,
 #             CompatibleVersions, Changelog, Requires,
-#             Obsoletes, Conflicts
+#             Obsoletes, Conflicts, TestCommands
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 SourcePackages:
 - jolla-keyboard >= 0.7.1
 
-Prefix: /usr/share
+Prefix: /usr/share/maliit/plugins/com/jolla
 DisplayName: Swiss German keyboard layout
 PackageName: sfos-patch-keyboard-swiss-german-layout
 Category: Keyboard
@@ -27,7 +31,7 @@ Keywords:
 - Swiss German
 
 Maintainer: ichthyosaurus
-Summary: Patch adding a new Swiss German keyboard layout.
+Summary: Patch adding a new Swiss German keyboard layout
 Description:
 - This patch adds a new Swiss German keyboard layout.
 -
@@ -38,28 +42,22 @@ Description:
 - which reduces the default height of the keyboard so it does not take as much
 - space on the screen.
 -
-- Switching between keyboards may become slower because of the extra row.
-- This cannot be changed unless the other keyboards add another row too. You
-- can install the [improved emojis patch](https://openrepos.net/content/ichthyosaurus/patch-improved-stock-emoji-keyboard)
-- to add an extra row to the stock emojis keyboard.
+- Note: the keyboard has a special key on the symbols page for switching to the
+- emoji keyboard. This key only works if the emoji keyboard is enabled in the
+- system settings. You can use [color emoji patch](https://openrepos.net/content/ichthyosaurus/patch-stock-emoji-keyboard-colors)
+- to be able to use all emojis with skin tone variations, etc.
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-swiss-german-keyboard-layout
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.5
+Version: 1.1.0
 Release: 1
+License: GPL-3.0-or-later
 
 Requires:
-- sailfish-version >= 3.0.0
-- jolla-keyboard >= 0.7.1
-
-# Conflicts:
-# - my-conflicting-package = 0.0.1
-# - the-old-name
-#
-# Obsoletes:
-# - the-other-old-name
+- sailfish-version >= 3.4.0
+- @sources
 
 Screenshots:
 - screenshot-1.png
@@ -69,40 +67,30 @@ Screenshots:
 - screenshot-5.png
 
 CompatibleVersions:
-- 2.1.0.11
-- 2.1.1.12
-- 2.1.1.23
-- 2.1.1.24
-- 2.1.1.26
-- 2.1.2.3
-- 2.1.3.3
-- 2.1.3.5
-- 2.1.3.7
-- 2.1.4.13
-- 2.1.4.14
-- 2.1.4.15
-- 2.2.0.29
-- 2.2.1.18
-- 2.2.1.19
-- 3.0.0.5
-- 3.0.0.8
-- 3.0.0.11
-- 3.0.1.11
-- 3.0.1.14
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
-
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 Changelog:
+- 1.1.0:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+- - you may have to install an older release for older SailfishOS versions
+- - add donations link and feedback forum
+-
 - 1.0.5:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
